# secretguard

./: .claude-initial-prompt.md  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCT_REQUIREMENTS.md  PROJECT_BRIEF.md  PROJECT_SUMMARY.md  README.md  V0.2.0_RELEASE_NOTES.md  demo-report.html  pyproject.toml
.github/workflows/: ci.yml
ci-templates/: gitlab-ci.yml
demo-scan/: .secretguard.yml  app.js  config.py
secretguard/: __init__.py  __main__.py  models.py
secretguard/cli/: main.py
secretguard/config/: allowlist.py  loader.py
secretguard/detectors/: entropy_detector.py  ml_detector.py  patterns.py  regex_detector.py
secretguard/hooks/: installer.py
secretguard/ml/: classifier.py  features.py  training_data.py
secretguard/reporters/: html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
secretguard/reporters/templates/: report.html
secretguard/scanner/: engine.py  git_history.py
secretguard/utils/: __init__.py  crypto.py  io.py  masking.py
secretguard/verifiers/: __init__.py  aws_verifier.py  base.py  github_verifier.py
tests/: test_allowlist.py  test_classifier.py  test_cli.py  test_config_loader.py  test_engine.py  test_entropy_detector.py  test_gitignore.py  test_hooks.py  test_inline_ignore.py  test_masking.py  test_ml_detector.py  test_ml_features.py  test_models.py  test_new_patterns.py  test_regex_detector.py  test_reporters.py  test_sarif_reporter.py  test_staged_scan.py  test_utils.py
