[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secretguard"
version = "0.8.0"
description = "AI-enhanced secret detection and remediation tool for codebases"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Adham Rashed", email = "adham@adhampx.com" },
]
keywords = ["security", "secrets", "credentials", "scanner", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
verify = [
    "boto3>=1.26.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["secretguard"]

[tool.hatch.build]
artifacts = ["*.html"]

[project.scripts]
secretguard = "secretguard.cli.main:app"

[project.urls]
Homepage = "https://github.com/adhamcybersec/secretguard"
Documentation = "https://github.com/adhamcybersec/secretguard#readme"
Issues = "https://github.com/adhamcybersec/secretguard/issues"
Source = "https://github.com/adhamcybersec/secretguard"
Changelog = "https://github.com/adhamcybersec/secretguard/blob/master/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=secretguard --cov-report=term-missing --cov-report=html"
